--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,73 +1,40 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to JSONsilo guides'
+icon: house
 ---
 
+
 <img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
+  className="rounded"
+  src="/images/hero-jsonsilo.png"
+  alt="JSONsilo"
 />
 
-## Setting up
+Unlock the power of hassle-free JSON file hosting with JSONSilo! Dive into a freemium platform built by developers, for developers, where managing your JSON data is as smooth as it is reliable. Whether you're a seasoned pro or just getting started, JSONSilo is crafted to give you a seamless, developer-friendly experience that speaks your language.
 
-The first step to world-class documentation is setting up your editing environments.
+## Use Cases
 
-## Hello World!
+Here are some simple use cases that you can perform with JSONsilo:
+
+- Mobile apps / web apps that display static data and infrequently update data.
+- API mockups / Frontend data mockups.
+- Sharing JSON files (e.g., JSON configuration files, assets, raw data).
+
+
+## Getting Started
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Guides"
+    icon="book"
+    href="how-to/create-silo"
   >
-    Get your docs set up locally for easy development
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
+    title="API Reference"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="api-reference"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
