--- a/how-to/manage/public-silo-access.mdx
+++ b/how-to/manage/public-silo-access.mdx
@@ -12,15 +12,15 @@ This page is a guide on how to manage a public silo, how to use it in your proje
 - API mockups / Frontend data mockups.
 - Sharing JSON files (e.g., JSON configuration files, assets, raw data).
 
-### Endpoint
+### Base URL
 
-**Default Endpoint**
+**Default Base URL**
 
 ```
 https://api.jsonsilo.com/
 ```
 
-**Region-Based Endpoints**
+**Region-Base URL**
 
 ```
 https://[region-code].jsonsilo.com/
@@ -76,6 +76,10 @@ curl -X GET \
   });
 ```
 </CodeGroup>
+
+## Supported HTTP method
+
+- **GET** only
 
 ## Access Key
 
