--- a/how-to/manage/region.mdx
+++ b/how-to/manage/region.mdx
@@ -28,7 +28,7 @@ JSONsilo is committed to delivering global availability, powering millions of re
 | Region        | Code | Status       |
 |---------------|------|--------------|
 | United States: Central | `usc-01-api` | Available |
-| United States: West    | US-West    | Coming Soon |
+| United States: West    |  N/A    | Coming Soon |
 
 ## Change Region
 
