--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -4,27 +4,17 @@ description: 'Understand general concepts, response codes, and authentication st
 icon: star
 ---
 
-> Note:
-> This document is under maintenance. 🚧
-
-
 ## Base URL
 
 ```
 https://[region-code].jsonsilo.com/api/v1/
 ```
 
-## Regions
+## Regions code list
 
-JSONsilo support up to 3 regions
+<Note>Singapore and the United States regions are available only on paid plans.</Note>
 
-## Singapore Region Based URL
-
-**Regions name code list**
-
-<Note>Paid plan only able to use different region.</Note>
-
-If you are a legacy, basic, pro, or lifetime plan user, you can use the base URL based on your region.
+For more info about supported region, please [check here](/how-to/manage/region).
 
 | Name| Code  | Example |
 |-----|-------|---------|
@@ -32,7 +22,29 @@ If you are a legacy, basic, pro, or lifetime plan user, you can use the base URL
 | Singapore| `sg-01-api`| `https://sg-01-api.jsonsilo.com/api/v1/` |
 | United States (Central)| `usc-01-api`| `https://usc-01-api.jsonsilo.com/api/v1/` |
 
+
 ## Authentication
 
+### API Keys
 
-## Response Code
+The JSONSilo Manage API uses API keys for authentication. Every request to the API must include your API key, used to authenticate your requests.
+
+<Note>Remember that your API key is a secret. Do not share it with others or expose it in any client-side code (browsers, apps).</Note>
+
+All API requests should include your API key in an `X-MAN-API` or `x-man-api` HTTP header as follows:
+
+```bash
+x-man-api: API_KEY
+```
+
+#### Making a requests
+
+You can paste the command below into your terminal to run your first API request. Make sure to replace X-MAN-API with your secret API key.
+
+```bash
+curl -X GET \
+    -H 'X-MAN-API: YOUR_API_KEY' \
+    -H 'Content-Type: application/json' \
+    https://api.jsonsilo.com/api/v1/manage/[FILE_UUID]
+```
+
