--- a/changelog/update.mdx
+++ b/changelog/update.mdx
@@ -3,6 +3,15 @@ title: 'Update'
 description: 'Latest feature updates on JSONsilo.com:'
 ---
 
+<Update label="22-02-2025" description="v2.0.3b">
+
+### Update & Fix
+
+- UI fixed
+- Fixed minor bug
+</Update>
+
+
 <Update label="04-12-2024" description="v2.0.0">
 
 ### New logo
